# CourseTasksWithMentor

./: .gitignore  README.md
Task1/: CMakeLists.txt  README.md  main.cpp
Task2/: CMakeLists.txt  Tree.cpp  Tree.h  conanfile.txt  main.cpp
Task2/redBlackTree_lib/: CMakeLists.txt  Tree.h
Task2/testCatch2/: CMakeLists.txt  testTree.cpp
Task3/: CMakeLists.txt  conanfile.txt  main.cpp
Task3/Client/: CMakeLists.txt  client.cpp  client.h  main.cpp
Task3/Currency/: CMakeLists.txt  Currency.cpp  Currency.h
Task3/PyClient/: Client.py
Task3/Server/: CMakeLists.txt  Server.cpp  Server.h  main.cpp
Task4/ex1/: CMakeLists.txt  data.txt  main.cpp  strSet.cpp  strSet.h
Task4/ex2/: CMakeLists.txt  generator.py  input.txt  main.cpp  output.txt
Task4/ex3/: CMakeLists.txt  generator.py  input.txt  main.cpp  output.txt
